[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wgpu = { version = "26.0" }
bytemuck = { version = "1.4", features = ["derive"] }
arrow = { version = "53.0", default-features = false, features = ["ipc"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.70"
features = [
  "console",
  "Window",
  "Document", 
  "HtmlCanvasElement",
  "Navigator",
  "Element",
  "HtmlElement",
  "WorkerNavigator",
  "WorkerGlobalScope",
]
